@@ -458,11 +458,6 @@ struct PQXX_LIBEXPORT plpgsql_too_many_rows : plpgsql_error
   {}
 };
 
-struct PQXX_LIBEXPORT blob_already_exists : failure
-{
-  explicit blob_already_exists(std::string const &);
-};
-
 /**
  * @}
  */
